# SchemaViz

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
schemaviz/: __init__.py  __main__.py  cli.py
schemaviz/core/: __init__.py  analyzer.py  differ.py  extractor.py  models.py
schemaviz/render/: __init__.py  html_renderer.py  json_exporter.py  mermaid.py  plantuml.py  tui.py
schemaviz/utils/: __init__.py  colors.py  helpers.py
tests/: test_analyzer.py  test_extractor.py  test_models.py
